--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,7 @@ header {
   gap: 13rem;
   padding: 10px;
   align-items: center;
-  background-color: #272730e9;
+  background-color: #000000e9;
   width: 100%;
   height: 110px;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.03);
@@ -126,7 +126,6 @@ header a {
   display: flex;
   justify-content: center;
   gap: 10rem;
-  margin-bottom: 10rem;
 }
 
 .block-hero-image {
@@ -138,18 +137,17 @@ header a {
 }
 
 .hero-image img {
-  border: 1px solid #ffe565;
   width: 30rem;
-  height: 32rem;
+  height: 50rem;
 }
 
 .hero-info {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10rem;
+  gap: 5rem;
   position: absolute;
-  margin-top: 9rem;
+  margin-top: 4rem;
 }
 
 .info-div {
@@ -159,6 +157,102 @@ header a {
   height: 32rem;
 }
 
+.info {
+  margin-top: 4rem;
+}
+
 .info span {
-  font-size: 30px;
+  font-weight: 100;
+  font-size: 40px;
+}
+
+.info h1 {
+  font-size: 70px;
+  font-weight: 500;
+}
+
+.info p {
+  font-size: 20px;
+}
+
+
+
+
+.button-hero {
+  display: flex;
+  align-items: center;
+  gap: 3rem;
+  width: 10rem;
+  height: 10rem;
+}
+
+.button-hero button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 17px;
+  font-weight: 600;
+  padding: 20px;
+  width: 10rem;
+  height: 3rem;
+}
+
+
+
+.button-hero button i {
+  font-size: 20px;
+  margin-left: 10px;
+}
+
+
+.appstor button{
+  background-color: #ffffff;
+  color: #000000;
+  border-radius: 30px;
+  border: none;
+}
+
+.appstor button:hover {
+  background-color: #000000;
+  color: #ffffff;
+}
+
+.playstore button {
+  background-color: #ffe565;
+  color: #000000;
+  border-radius: 30px;
+  border: none;
+}
+
+.playstore button:hover {
+  background-color: #ffffff;
+}
+
+
+
+
+
+/* ------------------------------------------------- */
+
+/* ------------------ofline-------------- */
+
+.online {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 30px;
+  gap: 10px;
+  width: 100%;
+  height: 13rem;
+  color: #000000;
+  background-color: #ffe565;
+}
+
+.online h2 {
+  font-size: 35px;
+}
+
+.online p {
+  font-size:  ;
 }
